fix left-align on small screens

--- a/cadastralinfo-server/src/main/resources/public/cadastralinfo.css
+++ b/cadastralinfo-server/src/main/resources/public/cadastralinfo.css
@@ -7,20 +7,16 @@ body {
   height: 100%;
 }
 
-/* On screens that are 992px wide or less, the background color is blue */
 @media screen and (max-width: 992px) {
-  body {
-    background-color: blue;
-    color: white;
-  }
-}
-
-/* On screens that are 600px wide or less, the background color is olive */
-@media screen and (max-width: 600px) {
-  body {
-    background-color: olive;
-    color: white;
-  }
+    body {
+        /*background-color: blue;*/
+    }
+  
+    span.right-align {
+        /*display: inline-block;*/
+        text-align: left;
+        /*width: 100%;*/
+    } 
 }
 
 body, div {
